--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.16.4",
+    "nodemon": "^2.0.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mbussert/note-taker.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/mbussert/note-taker/issues"
+  },
+  "homepage": "https://github.com/mbussert/note-taker#readme"
 }
